# HC-RAG

./: .gitignore  EXAMPLE_configurable_weights.py  README.md  config.py  demo_visualization.py  embedding_generator.py  embeddings.py  enhanced_rag_system.py  graph_builder.py  integration_example.py  isRelevant.py  isRelevant_Function_Design.html  kg.html  knowledge_graph.py  langgraphrag.py  llamaindex.py  main.py  neo4j_rag_langgraph.py  pyproject.toml  pytest.ini  pytest_structure_recommendation.md  query_interface.py  query_parser.py  rag_pytest.py  rag_system.py  relevance_design.md  relevance_scorer.py  requirements.txt  sample_nodes.py  subgraph_expander.py  test_batch_vs_individual.py  test_isRelevant.py  test_llm_responses_20250630_161419.json  test_llm_responses_20250630_161419_responses.json  test_relevance_scorer.py  test_results_20250630_141808.json  test_results_20250630_145559.json  test_results_20250630_160600.json  test_results_20250630_162425.json  test_results_20250630_162425_responses.json  (+3 more)
data/: Product.csv  ProductCategory.csv  ProductDescription.csv  ProductModelProductDescription.csv  SalesOrderDetail.csv  SalesOrderHeader.csv  knowledge_graph_embeddings.pkl
experiments/: RAG_Implementation_Comparison.md  README.md  configurations.py  graph_relevance_integration.py  improved_rag_system.py  isRelevant_Function_Design.md  neo4j_rag_langgraph.py  neo4j_rag_langgraph_improved.py  rag_pytest_backup.py  rag_pytest_optimized.py  rag_system.py  relevance_scorer_design.py  requirements-test.txt  subgraph_viz_3497.html
notebooks/: main.ipynb
(+13 files in other folders)
