[project]
name = "hc-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.10",
    "neo4j>=5.28.1",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
]
